--- a/Milestone 1/assets/CSS/style.css
+++ b/Milestone 1/assets/CSS/style.css
@@ -15,6 +15,11 @@ body {
   --gray: #b1b1b1; /* testo*/
   --white: #e4e4e4; /* sfondo */
   --height-user: 60px;
+  --heavenly: #8edafc; /* sfondo notifiche*/
+}
+
+i{
+  cursor: pointer;
 }
 
 #app {
@@ -22,7 +27,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100%;
-  background-image: linear-gradient(var(--green) 20%, var(--light-gray) 20%);
+  background-image: linear-gradient(var(--green) 15%, var(--light-gray) 15%);
 }
 
 .container{
@@ -50,8 +55,6 @@ aside .utilizer{
   height: var(--height-user);
   background-color: var(--white);
   padding: 0 10px;
-  /* debug */
-  border: 1px solid black;
 }
 
 aside .utilizer .avatar{
@@ -77,8 +80,68 @@ aside .utilizer .icons i{
 aside nav{
   width: 100%;
   height: 120px;
-  /* debug */
-  background-color: lightblue;
+  background-color: var(--white);
+}
+
+aside nav .notifications{
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  width: 100%;
+  height: 60%;
+  background-color: var(--heavenly);
+}
+
+aside nav .notifications i{
+  background-color: white;
+  border-radius: 50%;
+  aspect-ratio: 1 / 1;
+  padding: 12px;
+  color: var(--heavenly);
+  margin-right: 10px;
+}
+
+aside nav .notifications .status{
+  display: flex;
+  flex-direction: column;
+  font-size: .8rem;
+}
+
+aside nav .notifications .status span:last-child{
+  color: gray;
+  text-decoration: underline;
+  font-size: .7rem;
+  margin-top: 5px;
+}
+
+aside nav .search-bar{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 40%;
+  color: gray;
+  padding: 0 15px;
+}
+
+aside nav .search-bar i{
+  margin-right: 15px;
+  padding: 7px 20px;
+  border: 1px solid gray;
+  border-radius: 5px;
+  background-color: white;
+}
+
+aside nav .search-bar input{
+  width: 100%;
+  padding: 7px 5px;
+  border: 1px solid gray;
+  border-radius: 5px;
+}
+
+/*FIXME:non funziona il colore del bordo al focus*/
+
+aside nav .search-bar input:focus{
+  border: 1px solid var(--heavenly);
 }
 
 /* ------------------CHAT AVVIATE------------------- */
