--- a/Milestone 3/assets/CSS/style.css
+++ b/Milestone 3/assets/CSS/style.css
@@ -294,11 +294,12 @@ main .content{
 }
 
 main .content .message{
-  min-width: 35%;
+  /* min-width: 35%; */
   max-width: 60%;
   margin: 5px 0;
   padding: 5px 35px 5px 15px;
   position: relative;
+  /* FIXME: COME POSSO MANDARE A CAPO UNA PAROLA LUNGHISSIMA CHE MI OCCUPA TANTO SPAZIO E VA OLTRE I LIMITI?  */
   /* debug */
   /* white-space: nowrap;
   overflow: hidden;
