--- a/Milestone 4/assets/CSS/style.css
+++ b/Milestone 4/assets/CSS/style.css
@@ -161,8 +161,12 @@ aside .chats-made ul{
 }
 
 aside .chats-made ul li{
+  width: 100%;
+}
+
+aside .chats-made ul li .items{
   display: flex;
-  height: 70px;
+  height: 100%;
   width: 100%;
   padding: 10px 15px;
   background-color: var(--white);
@@ -174,21 +178,21 @@ aside .chats-made ul li.active{
   background-color: #d8d8d8;
 }
 
-aside .chats-made ul li:hover{
+aside .chats-made ul li .items:hover{
   background-color: #fafafa;
 }
 
-aside .chats-made ul li .image{
+aside .chats-made ul li .items .image{
   height: 50px;
   margin-right: 15px;
 }
 
-aside .chats-made ul li .image img{
+aside .chats-made ul li .items .image img{
   height: 100%;
   border-radius: 50%;
 }
 
-aside .chats-made ul li .user{
+aside .chats-made ul li .items .user{
   display: flex;
   flex-direction: column;
   width: 100%;
