--- a/Milestone 5/assets/CSS/style.css
+++ b/Milestone 5/assets/CSS/style.css
@@ -7,6 +7,7 @@
 body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   height: 100vh;
+  width: 100vw;
 }
 
 /* TODO: CAMBIARE I NOMI ALLE TONALITÀ DEL GRIGIO  */
@@ -26,10 +27,21 @@ i{
 }
 
 #app {
+  height: 100%;
+  width: 100%;
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-image: linear-gradient(var(--green) 15%, var(--light-gray) 15%); */
+}
+
+.main-wrapper{
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
+  width: 100%;
   background-image: linear-gradient(var(--green) 15%, var(--light-gray) 15%);
 }
 
@@ -303,7 +315,6 @@ main .content{
 /* TODO: trovare il modo per far visualizzare gli ultimi messaggi quando se ne inseriscono troppi */
 
 main .content .message{
-  /* min-width: 35%; */
   max-width: 60%;
   margin: 5px 0;
   padding: 5px 35px 5px 15px;
@@ -330,7 +341,6 @@ main .content .message:hover span i{
 }
 
 main .content .message ul{
-  /* display: none; */
   list-style: none;
   font-size: 0.8rem;
   border-radius: 5px;
@@ -343,18 +353,9 @@ main .content .message ul{
   z-index: 1;
 }
 
-/* main .content .message ul.active{
-  display: block;
-} */
-
-/* TODO: al click della chevron aggiungo dispaly block  */
-
-/* main .content .message:hover ul{
-  display: block;
-}  */
-
 main .content .message ul li{
   padding: 10px;
+  cursor: pointer;
   border-bottom: 1px solid var(--light-gray);
 }
 
